# VR-apps-lab

./: .gitignore  AGENTS.md  LICENSE  README.md  README.ru.md  THIRD_PARTY_NOTICES.md  VRRealityWindowMvp.sln
config/: mvp.settings.json
docs/: README.md  README.ru.md  alvr-reuse-plan.md  current-feasibility-status.md  external-repos-reuse-plan.md  openxr-steamvr-passthrough-reuse-plan.md  overlay-vr-mvp-spec.md  pico-connect-constraint.md  pico-connect-passthrough-spike.md  pico-official-docs-direction.md  pico-openxr-camera-path.md  platform-foundation.md  public-roadmap.md  vr-projects-master-index.md  vr-projects-wave-3-utilities.md  vr-projects-wave-6-driver-bridges.md  vr-projects-wave-7-depth-pass.md  vr-utilities-repo-landscape.md  vrperfkit-reuse-plan.md
docs/foundation/: README.md  current-operating-context.md  platform-foundation.md  public-roadmap.md  repository-positioning-backlog.md  repository-positioning.md
docs/research/: README.md  current-focus.md
docs/research/catalog/: README.md  project-registry.md
docs/research/discovery/: README.md  discovery-sources.md  intake-pipeline.md  watchlist.md  (+1 more)
scripts/research/: Sync-GitHubResearchSources.ps1
spikes/PicoOpenXrExtensionProbe/: README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
spikes/PicoOpenXrExtensionProbe/app/src/main/cpp/: CMakeLists.txt  main.cpp
src/VRRealityWindow.App/: Program.cs  VRRealityWindow.App.csproj
src/VRRealityWindow.OpenVr/: OpenVrOverlayPresenter.cs  OpenVrPoseMath.cs  OpenVrRuntime.cs  OpenVrTrackedCameraProvider.cs  VRRealityWindow.OpenVr.csproj
(+165 files in other folders)
